# engine

./: .gitignore  AI.md  AI_Movie_Studio_V2.vcxproj  ARCHITECTURE.md  BUILDING_PLAN.md  CMakeLists.txt  CODEBASE_ANALYSIS.md  COMPREHENSIVE_ANALYSIS_AND_FIXES.md  ENGINE.md  INSTALLATION_COMPARISON.md  INSTALLATION_GUIDE.md  PROJECT_STRUCTURE.md  PYTHON_FIXES_COMPLETED.md  README.md  ROADMAP.md  RUN_APP.md  SETUP_GUIDE.md  TEMPLATES.md  UI.md  WORKFLOW_DIAGRAM.md  build.bat  build_and_run.bat  build_and_run.ps1  rebuild_renderer.ps1  run.ps1  test_ollama.py
ai_service/: .env.example  README.md  api.py  decision_engine.py  main.py  nlp_engine.py  ollama_client.py  run.bat  scene_analyzer.py  setup.bat
include/ai/: AIClient.h
include/animation/: AnimationClip.h  AnimationCurve.h  AnimationPlayer.h
include/core/: AnimationManager.h  AudioSystem.h  Camera.h  Command.h  CommandHistory.h  Engine.h  InputSystem.h  Light.h  Logger.h  Material.h  Mesh.h  Renderer.h  ResourceManager.h  SceneManager.h  SceneObject.h  SceneSerializer.h
include/loaders/: MeshLoader.h  TextureLoader.h
include/ui/: AICommandProcessor.h  AIMovieStudioUI.h  AssetBrowser.h  MenuSystem.h  PropertiesPanel.h  SceneHierarchy.h  TimelineSystem.h  ToolbarSystem.h  UI.h  UIManager.h  UIPanel.h  UIRenderer.h  ViewportRenderer.h
src/: main.cpp
src/ai/: AIClient.cpp
src/animation/: AnimationClip.cpp  AnimationCurve.cpp  AnimationPlayer.cpp
src/core/: AnimationManager.cpp  AudioSystem.cpp  Camera.cpp  Command.cpp  CommandHistory.cpp  Engine.cpp  InputSystem.cpp  Light.cpp  Logger.cpp  Material.cpp  Mesh.cpp  Renderer.cpp  ResourceManager.cpp  SceneManager.cpp  SceneObject.cpp  SceneSerializer.cpp
src/loaders/: MeshLoader.cpp  TextureLoader.cpp
src/ui/: AICommandProcessor.cpp  AIMovieStudioUI.cpp  AssetBrowser.cpp  MenuSystem.cpp  PropertiesPanel.cpp  SceneHierarchy.cpp  TimelineSystem.cpp  ToolbarSystem.cpp  UI.cpp  UIManager.cpp  UIRenderer.cpp  ViewportRenderer.cpp
